tests/samples/invalid/argument_type_mismatch.pn

fn foo(x: i32)
{
	return:
	x
}

fn main()
{
	return:
	foo(true)
}
